Return Registration on registerCapabilityListener()
Registrations, as a concept resulting via architecture-level fiat,
cannot throw exceptions. Codify this in registerCapabilityListener(),
which should previously have returned ListenerRegistration. Also clarify
nullness of return types.

Change-Id: I9f9cd1638568280ee4ae64ea104a665aeaca19e6
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>